tests/api/reference/negative/14-tokens-unterminated-quote.asm
const invalid: list = tokens.of("db 'unterminated")
